# agentic-flight-ops-intel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 04629ceccf64_initial_schema.py
docker/: entrypoint.sh
docs/: DEPLOYMENT.md
docs/screenshots/: .gitkeep  README.md
scripts/: seed_sample_data.py  sync_chroma_policies.py
scripts/postman/: afois_collection.json
src/afos/agents/: __init__.py  extraction.py  graph.py  message_utils.py  prompts.py  tools_delay.py  tools_policy.py
src/afos/api/: app.py  deps.py  error_handlers.py  router.py
src/afos/core/: logging.py  request_context.py  settings.py  startup_validation.py  warnings_config.py
src/afos/db/: __init__.py  session.py
src/afos/llm/: __init__.py  agent_errors.py  exceptions.py  gemini_native.py  langchain_chat.py  openai_chat.py  service.py
src/afos/rag/: __init__.py  chroma_store.py  embeddings.py  ingestion.py
tests/: conftest.py  test_embeddings.py  test_health.py  test_message_utils.py  test_operations.py
web/: .env.example  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/hooks/: use-flights.ts  use-llm-config.ts  use-ops-ready.ts  use-rag-search.ts  use-streaming-text.ts
web/src/lib/: api-client.ts  api-errors.ts  config.ts  flight-metrics.ts
web/src/providers/: demo-mode.tsx  query-provider.tsx  theme-provider.tsx
(+40 files in other folders)
