[project]
name = "agentic-flight-ops-intel"
version = "0.2.0"
description = "Agentic Flight Operations Intelligence System (AFOIS) backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Your Name" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.2.1",
  "structlog>=24.1.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.10",
  "openai>=1.55.0",
  "google-generativeai>=0.8.0",
  "langchain-google-genai>=2.0.0",
  "langchain-core>=0.3.21",
  "langchain>=0.3.21",
  "langchain-openai>=0.2.14",
  "langchain-chroma>=0.2.0",
  "langchain-community>=0.3.21",
  "langchain-text-splitters>=0.3.4",
  "langgraph>=0.2.74",
  "chromadb>=0.5.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore::urllib3.exceptions.NotOpenSSLWarning",
  "ignore:The default value of `allowed_objects`:langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
  "ignore:All support for the `google.generativeai` package has ended:FutureWarning",
]
